fix: change interfaces to implement technical requirements
