# docs/swagger.json
@@ -68,58 +68,6 @@
                 }
             }
         },
-        "/account/{accountId}/submit": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Отправляет заявку на счёт по её ID для дальнейшей обработки.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "Отправка заявки на счёт",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID заявки на счёт",
-                        "name": "accountId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Заявка на счёт успешно отправлена"
-                    },
-                    "400": {
-                        "description": "Неверный запрос",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Заявка на счёт не найдена",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Внутренняя ошибка сервера",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/accounts": {
             "get": {
                 "security": [
@@ -398,7 +346,7 @@
             }
         },
         "/accounts/{accountId}/contract/{contractId}/main": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "Bearer": []
@@ -443,6 +391,58 @@
                     },
                     "404": {
                         "description": "Заявка на счёт или договор не найдены",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/{accountId}/submit": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Отправляет заявку на счёт по её ID для дальнейшей обработки.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Отправка заявки на счёт",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID заявки на счёт",
+                        "name": "accountId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Заявка на счёт успешно отправлена"
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Заявка на счёт не найдена",
                         "schema": {
                             "$ref": "#/definitions/handler.errorResponse"
                         }
@@ -1056,11 +1056,11 @@
         "handler.authenticateUserRequest": {
             "type": "object",
             "required": [
-                "email",
+                "login",
                 "password"
             ],
             "properties": {
-                "email": {
+                "login": {
                     "type": "string"
                 },
                 "password": {
@@ -1075,6 +1075,12 @@
                     "type": "string"
                 },
                 "expiresAt": {
+                    "type": "string"
+                },
+                "isModerator": {
+                    "type": "boolean"
+                },
+                "login": {
                     "type": "string"
                 }
             }
@@ -1141,15 +1147,11 @@
         "handler.createUserRequest": {
             "type": "object",
             "required": [
-                "email",
-                "name",
+                "login",
                 "password"
             ],
             "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
+                "login": {
                     "type": "string"
                 },
                 "password": {
@@ -1294,9 +1296,6 @@
         "handler.updateUserRequest": {
             "type": "object",
             "properties": {
-                "name": {
-                    "type": "string"
-                },
                 "passwordHash": {
                     "type": "string"
                 }
